--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -5,7 +5,7 @@
 {% block corpo %}
 
 <h1>Informe usuário e senha</h1>
-<form action="" method="post">
+<form action="" method="post" autocomplete="off">
     {% csrf_token %}
     <div class="form-group">
         <label for="id_username">Nome de Usuário</label>
