--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -17,6 +17,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Entrar</button>
+    <a href="{% url 'gestor:add_user' %}" class="btn btn-info">Criar Usuário</a>
 </form>
 <!-- -->
 {% endblock corpo %}
