--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -8,7 +8,7 @@
 <form action="" method="post" autocomplete="off">
     {% csrf_token %}
     <div class="form-group">
-        <label for="{{ form.first_name.id_for_label }}">{{form.first_name.label}}</label> {% render_field form.first_name class="form-control" autofocus %}
+        <label for="{{ form.first_name.id_for_label }}">{{form.first_name.label}}</label> {% render_field form.first_name class="form-control" autofocus="autofocus" %}
     </div>
     <div class="form-group">
         <label for="{{ form.last_name.id_for_label }}">{{form.last_name.label}}</label> {% render_field form.last_name class="form-control" %}
@@ -17,7 +17,7 @@
         <label for="{{ form.username.id_for_label }}">{{form.username.label}}</label> {% render_field form.username class="form-control" %}
     </div>
     <div class="form-group">
-        <label for="{{ form.password.id_for_label }}">{{form.password.label}}</label> {% render_field form.password class="form-control" %}
+        <label for="{{ form.password.id_for_label }}">{{form.password.label}}</label> {% render_field form.password class="form-control" type="password" %}
     </div>
 
 
